syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.quarkus.example";
option java_outer_classname = "FileInfoProto";

package com.drive.backend.grpc.file_info;

service FileService {
  rpc UploadFile (FileUploadRequest) returns (FileUploadResponse);
  rpc DeleteFile (FileDeleteRequest) returns (FileOperationResponse);
  rpc RenameFile (FileRenameRequest) returns (FileOperationResponse);
  rpc ListUserFiles (ListUserFilesRequest) returns (ListUserFilesResponse);
}

message FileUploadRequest {
  string filename = 1;
  string content = 2;
}

message FileUploadResponse {
  bool success = 1;
  string message = 2;
}

message FileDeleteRequest {
  string uuid = 1;
}

message FileRenameRequest {
  string uuid = 1;
  string newFilename = 2;
}

message FileOperationResponse {
  bool success = 1;
  string message = 2;
}

message ListUserFilesRequest {
  string username = 1;
}

message FileInfo {
  string object_name = 1;
  string filename = 2;
  int64 size = 3;
  int64 last_modified = 4; // timestamp in milliseconds
  string file_url = 5;
  string uuid = 6;
}

message ListUserFilesResponse {
  bool success = 1;
  string message = 2;
  repeated FileInfo files = 3;
}
